@@ -17,7 +17,8 @@
 - dzsave --layout google has a @background option
 - dzsave has a --depth option
 - update for new glib threading API
-- remove no threads option
+- remove no threads option, glib no longer support it
+- better --help output for vips driver prog
 
 2/10/12 started 7.30.4
 - remove options from format string in .dzi (thanks Martin)
